# pi485

./: README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
cad/: base-stand.scad
demo-firmware/src/: buttons.rs  display.rs  rs485.rs
firmware/demo/: Cargo.toml
firmware/demo/src/: ethernet.rs  main.rs
firmware/usb-rs485/: Cargo.toml  rust-toolchain.toml
firmware/usb-rs485/src/: main.rs  rs485.rs  usb.rs
pcb/: fp-lib-table  pi485.kicad_pcb  pi485.kicad_pro  pi485.kicad_sch  sym-lib-table
