[package]
name = "pi485-demo-firmware"
version = "0.1.0"
authors = ["Dan Nixon <dan@dan-nixon.com>"]
edition = "2024"
license = "MIT"

[dependencies]
assign-resources = "0.5.0"
cortex-m-rt = "0.7.3"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
embassy-embedded-hal = "0.4.0"
embassy-executor = { version = "0.8.0", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-futures = "0.1.1"
embassy-net = { version = "0.7.0", features = ["defmt", "dhcpv4", "dns", "proto-ipv4", "tcp", "udp"] }
embassy-net-wiznet = "0.2.0"
embassy-rp = { version = "0.7.0", features = ["rp2040", "defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-sync = "0.7.1"
embassy-time = { version = "0.4.0", features = ["defmt"] }
embedded-graphics = "0.8.1"
embedded-hal = "1.0.0"
embedded-io-async = "0.6.1"
mipidsi = "0.9.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
portable-atomic = { version = "1.9.0", features = ["critical-section"] }
static_cell = "2.1.0"

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"

[lints.rust]
unused_crate_dependencies = "deny"
